@@ -57,6 +57,9 @@ Trunk -  Unreleased
     HIVE-1238. Get Partitions with a partial specification
     (Paul Yang via Ning Zhang)
 
+    HIVE-1244. add backward-compatibility constructor to HiveMetaStoreClient
+    (John Sichi via Ning Zhang)
+
   IMPROVEMENTS
     HIVE-983. Function from_unixtime takes long.
     (Ning Zhang via zshao)
